# modelops-contracts

./: README.md  pyproject.toml
src/modelops_contracts/: __init__.py  adaptive.py  artifacts.py  auth.py  batch.py  bundle_environment.py  entrypoint.py  environment.py  errors.py  jobs.py  manifest.py  param_hashing.py  ports.py  protocols.py  provenance.py  registry.py  sim.py  simulation.py  study.py  types.py  version.py
tests/: test_artifacts.py  test_batch.py  test_contracts.py  test_entrypoint.py  test_manifest.py  test_ports.py  test_protocols.py  test_provenance.py  test_registry.py  test_simulation.py
