[project]
name = "modelops-contracts"
version = "0.1.0"
description = "Stable interface between ModelOps infrastructure and Calabaria science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
]  # Still zero dependencies!

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelops_contracts"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/modelops_contracts",
    "/tests",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
